--- a/p5WebsiteTest/Pages/Shared/_Layout.cshtml
+++ b/p5WebsiteTest/Pages/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - p5WebsiteTest</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <script src="~/css/p5.js" asp-append-version="true" />
+    <script src="~/js/p5.js" asp-append-version="true"></script>
 
     <link rel="stylesheet" href="~/p5WebsiteTest.styles.css" asp-append-version="true" />
 </head>
@@ -23,9 +23,6 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                     </ul>
                 </div>
