Added Fractal Tree page

--- a/p5WebsiteTest/Pages/Shared/_Layout.cshtml
+++ b/p5WebsiteTest/Pages/Shared/_Layout.cshtml
@@ -24,6 +24,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/WaveMachine/WaveMachine">Wave Machine</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/FractalTree/FractalTree">Tree Fractal</a>
+                        </li>
                     </ul>
                 </div>
             </div>
